--- a/app/src/main/res/layout/book_profile.xml
+++ b/app/src/main/res/layout/book_profile.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#4E4E4E">
 
@@ -11,25 +11,25 @@
         android:id="@+id/button_profile"
         android:layout_width="62dp"
         android:layout_height="41dp"
+        android:layout_marginStart="16dp"
         android:backgroundTint="#E9967A"
         android:text="מחק"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/image_profile"
-        app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/book_name_profile"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/book_name_profile"
         android:layout_width="88dp"
         android:layout_height="42dp"
+        android:layout_marginEnd="20dp"
         android:text="שם ספר"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/image_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -39,8 +39,49 @@
         android:src="@android:drawable/ic_dialog_info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/book_name_profile"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.521" />
+        app:layout_constraintVertical_bias="0.428" />
+
+    <TextView
+        android:id="@+id/category_profile"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:text="קטגוריה"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
+        app:layout_constraintStart_toEndOf="@+id/button_profile"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/author_name"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="3dp"
+        android:text="שם הסופר"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/condition_profile"
+        app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
+        app:layout_constraintStart_toEndOf="@+id/button_profile"
+        app:layout_constraintTop_toBottomOf="@+id/category_profile" />
+
+    <TextView
+        android:id="@+id/condition_profile"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:text="מצב"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toEndOf="@+id/button_profile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
