--- a/app/src/main/res/layout/book_search_component.xml
+++ b/app/src/main/res/layout/book_search_component.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -26,67 +27,67 @@
             android:text="בחר"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/nameBookId_TextView"
             android:layout_width="154dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
             android:text="שם ספר"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/ImageBookId_ImageView"
+            app:layout_constraintStart_toEndOf="@+id/ImageBookId_ImageView"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/categoryBookId_TextView"
             android:layout_width="154dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
             android:text="קטגוריה -קטגוריית הספר"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toStartOf="@+id/ImageBookId_ImageView"
+            app:layout_constraintStart_toEndOf="@+id/ImageBookId_ImageView"
             app:layout_constraintTop_toBottomOf="@+id/nameBookId_TextView" />
 
         <TextView
             android:id="@+id/authorBookId_TextView"
             android:layout_width="154dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
             android:text="סופר - כותב הספר"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toStartOf="@+id/ImageBookId_ImageView"
+            app:layout_constraintStart_toEndOf="@+id/ImageBookId_ImageView"
             app:layout_constraintTop_toBottomOf="@+id/categoryBookId_TextView" />
 
         <TextView
             android:id="@+id/conditionBookId_TextView"
             android:layout_width="154dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
             android:text="מצב הספר - מצב הספר"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toStartOf="@+id/ImageBookId_ImageView"
+            app:layout_constraintStart_toEndOf="@+id/ImageBookId_ImageView"
             app:layout_constraintTop_toBottomOf="@+id/authorBookId_TextView" />
 
         <TextView
             android:id="@+id/cityBookId_TextView"
             android:layout_width="154dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
             android:text="עיר - עיר הבעלים"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toStartOf="@+id/ImageBookId_ImageView"
+            app:layout_constraintStart_toEndOf="@+id/ImageBookId_ImageView"
             app:layout_constraintTop_toBottomOf="@+id/conditionBookId_TextView" />
 
         <ImageView
@@ -95,7 +96,7 @@
             android:layout_height="110dp"
             android:src="@android:drawable/ic_dialog_info"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
