--- a/app/src/main/res/layout/activity_notification_screen.xml
+++ b/app/src/main/res/layout/activity_notification_screen.xml
@@ -25,7 +25,7 @@
         android:layout_height="49dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text=":  התראות "
+        android:text="התראות :"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
