--- a/app/src/main/res/layout/book_profile.xml
+++ b/app/src/main/res/layout/book_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="#4E4E4E">
 
 
@@ -21,8 +22,8 @@
 
     <TextView
         android:id="@+id/book_name_profile"
-        android:layout_width="88dp"
-        android:layout_height="42dp"
+        android:layout_width="114dp"
+        android:layout_height="49dp"
         android:layout_marginEnd="20dp"
         android:text="שם ספר"
         android:textColor="#FFFFFF"
