--- a/app/src/main/res/layout/book_profile.xml
+++ b/app/src/main/res/layout/book_profile.xml
@@ -12,77 +12,82 @@
         android:id="@+id/button_profile"
         android:layout_width="62dp"
         android:layout_height="41dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#E9967A"
         android:text="מחק"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.709" />
 
     <TextView
         android:id="@+id/book_name_profile"
         android:layout_width="114dp"
         android:layout_height="49dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="8dp"
         android:text="שם ספר"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/image_profile"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/button_profile"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.808" />
 
     <ImageView
         android:id="@+id/image_profile"
         android:layout_width="72dp"
         android:layout_height="76dp"
+        android:layout_marginEnd="8dp"
         android:src="@android:drawable/ic_dialog_info"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintEnd_toStartOf="@+id/author_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/category_profile"
         android:layout_width="80dp"
         android:layout_height="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="קטגוריה"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/author_name"
         app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
-        app:layout_constraintStart_toEndOf="@+id/button_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/author_name"
         android:layout_width="80dp"
         android:layout_height="20dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="שם הסופר"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/condition_profile"
-        app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
-        app:layout_constraintStart_toEndOf="@+id/button_profile"
-        app:layout_constraintTop_toBottomOf="@+id/category_profile" />
+        app:layout_constraintEnd_toStartOf="@+id/book_name_profile" />
 
     <TextView
         android:id="@+id/condition_profile"
         android:layout_width="80dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="מצב"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/book_name_profile"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toEndOf="@+id/button_profile" />
+        app:layout_constraintEnd_toStartOf="@+id/book_name_profile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
