--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -77,7 +77,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.949"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PersonalDetails" />
+        app:layout_constraintTop_toBottomOf="@+id/event_books" />
 
 
     <ScrollView
@@ -116,7 +116,7 @@
         app:srcCompat="@drawable/exbooks" />
 
     <TextView
-        android:id="@+id/PersonalDetails"
+        android:id="@+id/event_books"
         android:layout_width="118dp"
         android:layout_height="34dp"
         android:layout_marginTop="12dp"
@@ -147,7 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editCity" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editName"
+        android:id="@+id/month"
         android:layout_width="224dp"
         android:layout_height="45dp"
         android:layout_marginTop="56dp"
@@ -170,7 +170,7 @@
         app:layout_constraintEnd_toStartOf="@+id/mail"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editName" />
+        app:layout_constraintTop_toBottomOf="@+id/month" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editCity"
