--- a/app/src/main/res/layout/activity_manger_menu.xml
+++ b/app/src/main/res/layout/activity_manger_menu.xml
@@ -133,8 +133,10 @@
         android:layout_marginBottom="16dp"
         android:background="#00FFFFFF"
         android:scaleType="fitXY"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/notification" />
+        tools:srcCompat="@drawable/notification"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
