--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -147,7 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editCity" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/month"
+        android:id="@+id/editName"
         android:layout_width="224dp"
         android:layout_height="45dp"
         android:layout_marginTop="56dp"
@@ -170,7 +170,7 @@
         app:layout_constraintEnd_toStartOf="@+id/mail"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/month" />
+        app:layout_constraintTop_toBottomOf="@+id/editName" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editCity"
