--- a/app/src/main/res/layout/book_profile.xml
+++ b/app/src/main/res/layout/book_profile.xml
@@ -9,7 +9,7 @@
 
 
     <Button
-        android:id="@+id/button_profile"
+        android:id="@+id/delete_button_profile"
         android:layout_width="62dp"
         android:layout_height="41dp"
         android:layout_marginEnd="16dp"
@@ -31,7 +31,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_profile"
+        app:layout_constraintEnd_toStartOf="@+id/delete_button_profile"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.808" />
 
