--- a/app/src/main/res/layout/activity_customer_menu.xml
+++ b/app/src/main/res/layout/activity_customer_menu.xml
@@ -2,23 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/register_screen"
+    android:id="@+id/activity_customer_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4E4E4E"
     tools:context=".Screens.CustomerMenu">
 
-    <ImageButton
-        android:id="@+id/notification_button"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+    <include
+        android:id="@+id/bell"
+        layout="@layout/bell"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        android:background="#00FFFFFF"
-        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/notification" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
