--- a/app/src/main/res/layout/activity_manger_menu.xml
+++ b/app/src/main/res/layout/activity_manger_menu.xml
@@ -23,7 +23,7 @@
         android:id="@+id/textView10"
         android:layout_width="168dp"
         android:layout_height="49dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="תפריט ראשי"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -122,6 +122,20 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/M_new_manager"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/edit_clients"
+        android:layout_width="290dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:text="עריכת משתמשים"
+        android:textSize="18sp"
+        app:backgroundTint="#E9967A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/M_newevents_Button"
         tools:ignore="MissingConstraints" />
 
     <ImageView
