--- a/app/src/main/res/layout/activity_customer_menu.xml
+++ b/app/src/main/res/layout/activity_customer_menu.xml
@@ -51,10 +51,10 @@
         android:layout_marginTop="16dp"
         android:text="אירועי ספרים"
         android:textSize="18sp"
-        app:backgroundTint="#E9967A"
+        app:backgroundTint="#7079b3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upload_button"
+        app:layout_constraintTop_toBottomOf="@+id/profile_button"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -93,7 +93,7 @@
         app:backgroundTint="#E9967A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/events_button"
+        app:layout_constraintTop_toBottomOf="@+id/upload_button"
         tools:ignore="MissingConstraints" />
 
     <ImageView
