--- a/app/src/main/res/layout/activity_manger_menu.xml
+++ b/app/src/main/res/layout/activity_manger_menu.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="16dp"
         android:text="אירועי ספרים"
         android:textSize="18sp"
-        app:backgroundTint="#E9967A"
+        app:backgroundTint="#7079b3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/M_upload_button"
