--- a/app/src/main/res/layout/activity_customer_menu.xml
+++ b/app/src/main/res/layout/activity_customer_menu.xml
@@ -49,7 +49,7 @@
         android:layout_width="290dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:text="אירועי ספרים"
+        android:text="אירוע ספרים למסירה"
         android:textSize="18sp"
         app:backgroundTint="#7079b3"
         app:layout_constraintEnd_toEndOf="parent"
