--- a/app/src/main/res/layout/book_event_screen.xml
+++ b/app/src/main/res/layout/book_event_screen.xml
@@ -25,21 +25,21 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="417dp"
+        android:layout_height="119dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/exbooks" />
 
     <ScrollView
         android:id="@+id/search_result_scrollView"
-        android:layout_width="401dp"
-        android:layout_height="429dp"
+        android:layout_width="382dp"
+        android:layout_height="454dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10">
+        app:layout_constraintTop_toBottomOf="@+id/timer">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,5 +54,39 @@
                 android:layout_alignParentTop="true" />
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="175dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
+        android:text="ספרים למסירה"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="89dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="60dp"
+        android:text="זמן שנותר:"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/search_result_scrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.555" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="89dp"
+        android:layout_height="30dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/textView16"
+        app:layout_constraintHorizontal_bias="0.867"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
