--- a/app/src/main/res/layout/activity_notification_screen.xml
+++ b/app/src/main/res/layout/activity_notification_screen.xml
@@ -18,6 +18,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/exbooks" />
 
+    <Button
+        android:id="@+id/back_to_menu_button"
+        android:layout_width="290dp"
+        android:layout_height="43dp"
+        android:text="חזרה לתפריט הראשי"
+        android:textSize="18sp"
+        app:backgroundTint="#E9967A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification_scrollView"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/notification_textview"
         android:layout_width="168dp"
