--- a/app/src/main/res/layout/book_profile.xml
+++ b/app/src/main/res/layout/book_profile.xml
@@ -14,8 +14,8 @@
         android:layout_height="41dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#E9967A"
-        android:text="מחק"
-        android:textSize="18sp"
+        android:text="REMOVE"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
